<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.xiaohai</groupId>
		<artifactId>xiaohai-blog</artifactId>
		<version>0.0.1</version>
	</parent>
	<artifactId>xiaohai-file</artifactId>
	<version>0.0.1</version>
	<name>xiaohai-file</name>
	<description>file 文件模块</description>
	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<!--common通用工具-->
		<dependency>
			<groupId>com.xiaohai</groupId>
			<artifactId>xiaohai-common</artifactId>
		</dependency>
		<!--smb协议获取共享文件夹内容-->
		<dependency>
			<groupId>jcifs</groupId>
			<artifactId>jcifs</artifactId>
			<version>1.3.17</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

</project>
